Caffeine Caching
Guava Cache recommends moving to Caffeine
Mostly a drop in replacement
Although the refreshAfterWrite works a little different

Signed-off-by: Duane May <duane.may@broadcom.com>